# game-decider-app

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README-how-to-run-and-validate-each-task.md  README.md  codecov.yml  debug_output.html  docker-compose.yml  package.json
backend/: .flake8  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 20250601_213553_221a4730c744_create_initial_tables.py  20250608_191300_502581f6e512_add_game_sessions_table_for_multi_.py
backend/app/: __init__.py  __main__.py  cli.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  errors.py  exceptions.py  logging.py  middleware.py
backend/app/data_processing/: __init__.py  bga_processor.py  player_stats_parser.py  session_processor.py
backend/app/models/: __init__.py  associations.py  base.py  game.py  game_category.py  game_session.py  game_tag.py  player.py  player_game_history.py  player_preferences.py
backend/app/repositories/: game.py  player.py  player_preferences.py
backend/app/schemas/: compatibility.py  game.py  player.py  player_game_history.py  player_preferences.py
backend/app/seeds/: __init__.py  seed_runner.py
backend/app/seeds/seeders/: base.py  game_categories.py  game_sessions.py  game_tags.py  (+2 more)
backend/app/services/: compatibility.py
backend/scripts/: check.py
backend/tests/: README.md  conftest.py
backend/tests/api/: test_health.py
backend/tests/repositories/: test_game.py
backend/tests/utils/: test_utils.py
(+189 files in other folders)
